@@ -1,11 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1 2015/04/23 10:45:58 nros Exp $
-${PYSITELIB}/${EGG_FILE}
-${PYSITELIB}/hglist/__init__.py
-${PYSITELIB}/hglist/__init__.pyc
-${PYSITELIB}/hglist/__init__.pyo
-${PYSITELIB}/hglist/filters.py
-${PYSITELIB}/hglist/filters.pyc
-${PYSITELIB}/hglist/filters.pyo
-${PYSITELIB}/hglist/list_files.py
-${PYSITELIB}/hglist/list_files.pyc
-${PYSITELIB}/hglist/list_files.pyo
